# apify-mcp-server

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DESIGN_SYSTEM_AGENT_INSTRUCTIONS.md  DEVELOPMENT.md  Dockerfile  README.md  eslint.config.mjs  knip.json  manifest.json  openai-csp-migration.md  package-lock.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  server.json  tsconfig.eslint.json  tsconfig.json  vitest.config.ts  x402-proposal-review.md
.actor/: ACTOR.md  Dockerfile  actor.json  input_schema.json
.devforge/: .gitignore  config.json  registry.json
.github/: pull_request_template.md
.well-known/: x402.json
docs/: chatgpt-app-submission.json  sats402-wrapper.md  smithery.md
evals/: README.md  config.py  config.ts  create-dataset.ts  create_dataset.py  create_dataset.ts  eval-single.ts  eval_single.ts  evaluation-utils.ts  evaluation_2025.ipynb  evaluation_utils.ts  export-tools.ts  run-evaluation.ts  run_evaluation.py  run_evaluation.ts  test-cases.json  test_cases.json  tools.json  tsconfig.json
evals/workflows/harbor/: Dockerfile  Dockerfile.dockerignore  pyproject.toml  ts_executor_agent.py
mds/: TELEMETRY.md
res/: INDEX.md  MCP_SERVER_REFACTOR_ANALYSIS.md  TODO-mcp-apps-migration.md  call_actor_redesign_v2.md  call_actor_redesign_v3.1.md  call_actor_redesign_v3.md  call_actor_redesign_v4.md  chatgpt-app-submission.md  code-mode.md  index.md  integration_test_coverage_audit.md  mcp-resources-refactor-analysis.md  mcp_task_reference.md  pr823_reorg_brief.md  (+10 more)
(+626 files in other folders)
